immich/base/immich-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
  labels:
    app: immich-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-app
  template:
    metadata:
      labels:
        app: immich-app
    spec:
      serviceAccountName: immich-sa
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v2.2.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2283
              name: http
            - containerPort: 3003
              name: immich-ml
          readinessProbe:
            httpGet:
              path: /
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /auth/login
              port: 2283
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              memory: "2Gi"
              cpu: "2000m"
            limits:
              memory: "4Gi"
              cpu: "4000m"
          volumeMounts:
            - name: immich-lybrary-pv
              mountPath: /mnt/data/immich
      volumes:
        - name: immich-lybrary-pv
          persistentVolumeClaim:
            claimName: immich-lybrary-pvc
