immich/base/ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-ml-app
  template:
    metadata:
      labels:
        app: immich-ml-app
    spec:
      serviceAccountName: immich-sa
      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:v2.2.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
              name: immich-ml
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: ml-cache
              mountPath: /cache
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "1Gi"
              cpu: "2000m"
      volumes:
        - name: ml-cache
          emptyDir: {}
