immich/base/immich-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-app
  ports:
    - port: 2283
      targetPort: 2283
      name: http
    - port: 3003
      targetPort: 3003
      name: machine-learning
