immich/base/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-ml-app
  ports:
    - name: machine-learning
      port: 3003
      targetPort: 3003
  type: ClusterIP
