immich/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis-service
  namespace: immich
spec:
  selector:
    app: immich-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
