immich/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.entrypoints: websecure 
      traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
      - immich.mostreliable.bid
  rules:
    - host: immich.mostreliable.bid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
